# libOMX_Core-DM81xx

./: Makefile.am  Makefile.in  README  configure  configure.ac  dummy.c  libOMX_Core.pc.in  linker.script.in
patches/: add-missing-xdc-header-include.patch
